Name:                cucumber
Version:             0.1
Synopsis:            A cucumber lookalike in Haskell
Homepage:            git://github.com/sakari/haskell-cucumber.git
License:             BSD3
License-file:        LICENSE
Author:              Sakari Jokinen
Maintainer:          sakariij@gmail.com
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.10

test-suite doctest
  main-is: MainDocTest.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:
    base >= 4 && < 5,
    test-framework >= 0.4,
    test-framework-doctest >= 0.1,
    doctest >= 0.4.0,
    cucumber >= 0.1,
    gherkin >= 0.1

test-suite base
  main-is: Main.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  build-depends:
    base >= 4 && < 5,
    test-framework >= 0.4,
    test-framework-hunit >= 0.2,
    cucumber >= 0.1,
    gherkin >= 0.1

Library
 default-language: Haskell2010
 ghc-options: -Wall
 exposed-modules: Test.Cucumber
 build-depends:
   base >= 4,
   gherkin >= 0.1,
   test-framework >= 0.4.0,
   parsec >= 3.1.1,
   pretty >= 1.1.0.0,
   regex-compat >= 0.93.1,
   test-framework-hunit >= 0.2.6,
   mtl >= 2.0.1.0
